k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: uptime-status-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: uptime
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
