k8s/base/status-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-web
  namespace: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-web
  template:
    metadata:
      labels:
        app: status-web
    spec:
      containers:
        - name: status-web
          image: uptime-status-status-web:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: status-web
  namespace: uptime
spec:
  selector:
    app: status-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
