k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime
  namespace: uptime
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.myproj.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
    - host: status.myproj.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-web
                port:
                  number: 3000
